Creating page's component and route.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-ifood-navbar></app-ifood-navbar>
+<section class="section app-main">
+  <div class="container app-content">
+    <router-outlet></router-outlet>
+  </div>
+</section>
 <app-ifood-footer></app-ifood-footer>
