--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
-        <strong>iFood Suggestion</strong> por
+        <strong>iFood Suggestion</strong> by
         <a href="mailto:gustavo@gm.eti.br">Gustavo Martim</a>.
       </p>
       <br />
